# anubisat

./: CHANGELOG.md  LICENSE  README.md  anubisat.cabal  hie.yaml  universe.txt
src/: Anubisat.hs
test/: Spec.hs
